--- a/app.css
+++ b/app.css
@@ -8,7 +8,7 @@ h1:hover {
     font-size: 30px;
 }
 
-#galaxy-photo{ /* hastag means this is an ID */
+#galaxy-photo { /* hastag means this is an ID */
     width: 250px;
 }
 
@@ -31,4 +31,23 @@ input[type="text"] {
     color: gray;
     text-decoration: line-through;
     opacity: 50%;
+}
+
+#impossible {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    height: 50px;
+    width: 100px;
+}
+
+#boxes {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.box {
+    width: 200px;
+    height: 500px;
 }
